--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.0.3",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.3",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ngxs/devtools-plugin": "^18.0.0-dev.master-c177048",
+    "@ngxs/logger-plugin": "^18.0.0-dev.master-c177048",
+    "@ngxs/store": "^18.0.0-dev.master-c177048",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
